Update README location and add commit to project attributes
The README file location has been updated from "docs" to the project root and its layout has changed. The commit hash has been included in the project file and assembly info attributes. Addition of sourcelink.json file to net8.0 debug artifacts is also part of this commit.

--- a/Ntt.Exceptions/Ntt.Exceptions.csproj
+++ b/Ntt.Exceptions/Ntt.Exceptions.csproj
@@ -15,7 +15,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
         <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.37.0" />
-        <None Include="docs\README.md" Pack="true" PackagePath="\"/>
+        <None Include="..\README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
 </Project>
